Replace if() function by @if at-rule

--- a/_em.scss
+++ b/_em.scss
@@ -7,9 +7,9 @@
 @function _divide($a, $b) {
   @if map.has-key(meta.module-functions("math"), "div") {
     @return math.div($a, $b);
+  } @else {
+    @return $a / $b;
   }
-
-  @return $a / $b;
 }
 
 @function convert($values...) {
@@ -28,7 +28,11 @@
     }
   }
 
-  @return if(list.length($result) == 1, list.nth($result, 1), $result);
+  @if list.length($result) == 1 {
+    @return list.nth($result, 1);
+  } @else {
+    @return $result;
+  }
 }
 
 @mixin convert($properties, $context) {
